Fix messagelist collapsed/minified message color

--- a/Libadwaita-common/messagelist.less
+++ b/Libadwaita-common/messagelist.less
@@ -253,11 +253,11 @@
 #message-list .message-item-wrap.collapsed {
 	.message-item-white-wrap {
 		box-shadow: @card_shadow !important;
-		background-color: darken(@window_bg_color, 1.5%);
+		background-color: mix(@window_bg_color, @view_fg_color, 98.5%);
 		border: 0;
 
 		&:hover {
-			background-color: darken(@window_bg_color, 4%);
+			background-color: mix(@window_bg_color, @view_fg_color, 96%);
 		}
 	}
 
@@ -298,7 +298,7 @@
 
 	.msg-line {
  		box-shadow: @card_shadow;
-		 background-color: darken(@window_bg_color, 1.5%);
+		background-color: mix(@window_bg_color, @view_fg_color, 98.5%);
 		border: 0;
 		border-radius: @card_radius;
 		height: 9px !important;
